--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 :root {
-
   --white: #fff;
   --black: #000;
   --primary-color: #d894ff;
@@ -15,6 +14,10 @@
 
 a {
   cursor: pointer;
+}
+
+button {
+  color: var(--white);
 }
 
 body {
@@ -190,14 +193,17 @@ input {
 
     & h1 {
         font-size: 6rem;
+        color: var(--white);
     }
 
     & h3 {
         font-size: 3rem;
+        color: var(--white);
+        filter: contrast(0.5);
     }
 
     & p {
-        padding-top: .5rem;
+        padding: 5rem 0 0 2rem;
         font-size: 1.5rem;
         color: #9b9b9b;
     }
@@ -224,8 +230,8 @@ input {
         border: none;
         border-radius: 5px;
         cursor: pointer;
+        margin: 0 0 0 2rem;
         transition: all 0.3s ease-in-out;
-        margin-top: 1rem;
 
         &:hover {
             opacity: 0.5;
@@ -314,7 +320,10 @@ input {
 
 #books {
     position: relative;
-    margin: 7rem 0;
+    height: auto;
+    width: 100%;
+    background-color: var(--last-color);
+    /* margin: 7rem 0; */
 
 
     /* & img:first-child {
@@ -347,17 +356,15 @@ input {
             padding: 3rem .5rem;
             border-radius: 3px;
             /* max-width: 500px; */
-            background-color: #141414;
-            
-
 
             & h2:nth-child(1) {
                 width: 100%;
                 text-align: center;
-                color: #8926b5;
-                margin-bottom: 20px;
+                color: var(--white);
+                text-shadow: 0 0 10px #000000;
                 font-size: 4rem;
                 font-weight: bold;
+                margin-bottom: 20px;
                 padding: 5rem 1rem 0 1rem;
             }
 
@@ -367,27 +374,36 @@ input {
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
-                /* height: 500px; */
-                /* height: 600px; */
-                min-height: 550px;
+                height: 652px;
+                max-height: 652px;
                 max-width: 350px;
                 width: 100%;
-                /* max-width: 500px; */
                 margin: 0 auto;
-                margin-top: 2rem;
-                padding: .5rem;
                 border-radius: 5px;
-                box-shadow: 0 0 20px #8a8a8a3f;
                 color: #000;
                 background-color: #fff;
-                transition: all 0.3s ease-in-out;
-                /* transform: scale(0.8); */
+                transition: all 0.5s ease-in-out;
+                border: 10px solid transparent;
 
                 & h2 {
                     font-size: 2rem;
+                    text-align: end;
                     margin-bottom: 1rem;
                     color: #000;
                     text-shadow: 0 0 10px #fff;
+                }
+
+                & h4 {
+                  padding-bottom: .3rem;
+                }
+
+                & h5  {
+                  color: var(--white);
+                  background-color: var(--last-color);
+                  padding: .5rem;
+                  margin-bottom: -.8rem;
+                  border-top-left-radius: 4px;
+                  border-top-right-radius: 4px;
                 }
 
                 & p {
@@ -397,6 +413,7 @@ input {
                     text-align: justify;
                     text-wrap: pretty;
                     display: none;
+                    transition: all 3s ease-in-out;
                 }
 
                 & button {
@@ -416,37 +433,66 @@ input {
                         box-shadow: 0 0 10px #000;
                     }
                 }
+                
+                & .action-nav {
+                  position: relative;
+                  width: 100%;
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: end;
+
+                  & svg {
+                    margin: 1rem;
+                    transition: all 0.1s ease;
+
+                    &:hover {
+                      transform: scale(1.1);
+                    }
+                  }
+                }
 
                 &:hover .caratula {
                   z-index: 1;
-                    transform: scale(1.05) translateY(40px);
+                  /* transform: translateY(40px); */
                 }
+
+                &:hover {
+                  border: 10px solid #ffffff;
+                }
+
+                /* &:active {
+                  transform: scale(1.05);
+                } */
+
+                /* &:hover p {
+                  display: inline-block;
+                  transition: all 3s ease-in-out;
+                } */
 
                 &:hover h2 {
                   opacity: 0.3;
               }
             
-            &:hover {
+            /* &:hover {
                 transform: scale(0.9);
-                box-shadow: 0 0 20px rgb(216, 148, 255 , 0.42);
-                cursor: pointer;
-            }
+                box-shadow: 0 0 20px rgb(216, 148, 255 , 0.42); 
+            } */
 
             & .caratula {
                 position: relative;
                 display: flex;
                 justify-content: center;
                 height: auto;
-                width: 200px;
+                max-height: 440px;
+                width: 100%;
                 margin-bottom: 1rem;
                 transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
                 & img {
                     height: auto;
-                    width: 80%;
+                    /* max-height: 440px; */
+                    width: 100%;
                     margin: 0 auto;
-
-                    border-radius: 5px;
                     filter: brightness(0.5);
                 }
 
@@ -505,6 +551,11 @@ input {
       }
   }
 
+  @keyframes stide-bottom {
+    to {
+      transform: translateY(100%);
+    }
+  }
 
 #reading-tracker {
   max-width: 800px;
@@ -519,7 +570,7 @@ input {
 
 h1 {
   color: #8926b5;
-  margin-bottom: 20px;
+  margin-bottom: .5rem;
   font-size: 2.2em;
 }
 
@@ -615,17 +666,20 @@ p {
       width: 100%;
       height: 100%;
       background-color: rgba(0, 0, 0, 0.5);
+      background: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url(/img/star.png);
       z-index: -1;
     }
 
     & h2 {
       font-size: 4rem;
-      color: var(--white);
+      color: var(--secondary-color);
+      letter-spacing: .2rem;
     }
     
     & p {
       font-size: 1rem;
       font-weight: 300;
+      text-align: center;
 
     }
 
@@ -727,6 +781,7 @@ p {
 }
 
 header {
+  z-index: 300;
   position: sticky;
   height: 110px;
   width: 100%;
@@ -734,6 +789,7 @@ header {
   z-index: 10;
   background-color: var(--last-color);
   box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+  background-image: url(/img/B.png);
 
   & div:first-child {
     height: auto;
@@ -795,9 +851,27 @@ header {
       display: none;
     }
 
-
     & a {
       text-decoration: none;
+    }
+
+    & .explorer-books {
+      background-color: #00000027;
+      backdrop-filter: blur(20px);
+      box-shadow: 5px 5px 5px #ffffff27, 5px 5px 5px #83036727, 5px 5px 5px  #b6015bb9, 5px  5px 5px #d894ff;
+      border-radius: 7px; 
+      margin-left: 3rem;
+      padding: .5rem;
+      animation: xplorer 1s  ease infinite alternate;
+
+      & img {
+        display: none;
+      }
+
+      &::after {
+        content: "";
+        display: none;
+      }
     }
 
     & li {
@@ -898,6 +972,16 @@ header {
   }
 }
 
+@keyframes xplorer {
+  0% {
+    box-shadow: 5px 5px 5px #ffffff27, 5px 5px 5px #83036727, 5px 5px 5px  #b6015bb9, 5px  5px 5px #d894ff;
+  }
+
+  100% {
+    box-shadow: 5px 5px 5px #d894ff, 5px 5px 5px #b6015bb9, 5px 5px 5px #83036727, 5px 5px 5px #00000027;
+  }
+}
+
 .display-block {
   display: block;
 }
@@ -929,12 +1013,30 @@ body.o {
     background-size: cover;
 
     & h2 {
+      z-index: 1;
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        font-size: 5rem;
-        font-weight: bold;
-        text-align: center;
-        padding: 3rem 0 0.5rem 0;
-        color: #8926b5;
+      color: var(--white);
+      text-shadow: 0 0 10px #000000;
+      font-size: 5rem;
+      font-weight: bold;
+      text-align: center;
+      padding: 3rem 0 0.5rem 0;
+
+        &::after {
+          content: "";
+          z-index: -1;
+          position: absolute;
+          top: -15%;
+          right: 25%;
+          width: 400px;
+          height: 400px;
+          transform: translate(0, -70%);
+          background-image: url(/img/star.png);
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: center;
+          transform: rotate(65.5deg);
+        }
     }
 
     & .tags {
@@ -942,7 +1044,7 @@ body.o {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: .2rem;
+      gap: .1rem;
       /* background-color: #ffffff27; */
       backdrop-filter: blur(20px);
       padding: 1rem 1rem 0 1rem;
@@ -951,7 +1053,7 @@ body.o {
 
     & p {
       position: relative;
-      font-size: 1.3rem;
+      font-size: .8rem;
       color: #fff;
       font-weight: 100;
       border-radius: 2px;
@@ -965,7 +1067,7 @@ body.o {
   }
 
     & p {
-      font-size: 2rem;
+      font-size: 1.5rem;
       font-weight: 500;
       text-align: center;
       text-shadow: 0 0 5px #000000a2;
@@ -1121,12 +1223,15 @@ body.o {
   border-radius: 8px;
 }
 
-h1 {
-  color: #8926b5; /* Color primario 1 */
-}
+/* h1 {
+  color: var(--black);
+  font-size: 3rem;
+  text-align: center;
+  padding: 1rem;
+} */
 
 h2 {
-  color: #d894ff; /* Color primario 2 */
+  color: var(--black);
 }
 
 p {
@@ -1151,8 +1256,9 @@ p {
 }
 
 .libro-lista a {
+  font-size: 1.5rem;
   text-decoration: none; /* Elimina el subrayado de los enlaces */
-  color: #8926b5; /* Color primario 1 */
+  color: var(--black); /* Color primario 1 */
   font-weight: bold; /* Texto en negrita para enlaces */
 }
 
@@ -1167,7 +1273,6 @@ p {
   border: none; /* Sin borde */
   border-radius: 5px; /* Bordes redondeados */
   padding: 10px 15px; /* Relleno dentro del botón */
-  cursor: pointer; /* Cambia el cursor al pasar por encima */
   font-size: 14px; /* Tamaño de fuente del botón */
   transition: background-color 0.3s; /* Transición de color de fondo */
 }
@@ -1183,7 +1288,7 @@ p {
 
 #our-team {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -1193,10 +1298,11 @@ p {
   background-image: url(/img/pexels-i-rem-karakas-53441851-8647727.jpg);
   background-size: cover;
   box-shadow: 0 0 20px #0000003f;
+  text-align: center;
+  text-shadow: 0 0 7px #000000;
   margin: auto;
   margin-bottom: 3rem;
   padding: 2rem;
-  text-shadow: 0 0 7px #000000;
 
   & div {
     padding: 1rem;
@@ -1413,6 +1519,7 @@ footer {
   color: #cccccc; /* Color claro para el texto */
 
   & button {
+    color: #ccc;
     background-color: transparent;
     border: none;
     text-decoration: underline 1px solid #8926b5;
@@ -1437,8 +1544,7 @@ footer {
   #stories {
 
     & h2 {
-      font-size: 1.7rem;
-      color: var(--white);
+      font-size: 2rem;
     }
 
     &::before {
